style navbar + header partie 2

--- a/wp-content/themes/site-promo-rennes/style.css
+++ b/wp-content/themes/site-promo-rennes/style.css
@@ -18,6 +18,8 @@ Author: Tyjow, Nabil, Julien, Anna
     height: 100vh;
     background-size: cover;
     background-position: center center;
+    -webkit-filter: contrast(135%) saturate(103%);
+    filter: contrast(135%) saturate(103%);
 }
 
 .menu-top-container {
@@ -27,22 +29,43 @@ Author: Tyjow, Nabil, Julien, Anna
     line-height: 50px;
     background-color: #fff;
     font-weight: 700;
+    border-bottom: 3px solid #009b9d;
+    box-shadow: 0 0 15px #444;
+    z-index: 999;
 }
 
 .menu-top-container ul {
+    display: flex;
+    justify-content: flex-end;
     list-style: none;
 }
 
-.menu-top-container ul li {
-    display: inline;
+.menu-top-container ul li a {
+    display: block;
+    /*margin-left: 20px;*/
+    padding: 0 25px;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: .3s;
+}
+
+.current-menu-item a, current_page_item a {
+    color: #009b9d;
 }
 
 .menu-top-container ul li a {
     color: #231f20;
+    transition: .3s;
 }
 
-.menu-top-container ul li:hover a {
-    color: #009b9d;
+.menu-top-container ul li:hover, .current_page_item {
+    
+}
+
+.menu-top-container ul li:hover a,
+.current_page_item a {
+    background-color: #009b9d;
+    color: #fff!important;
 }
 
 
