--- a/wp-content/themes/site-promo-rennes/style.css
+++ b/wp-content/themes/site-promo-rennes/style.css
@@ -126,6 +126,17 @@ Author: Tyjow, Nabil, Julien, Anna
     padding: 20px;
 }
 
+#footer {
+    background-color: #009b9d;
+    text-align: center;
+    color: #ffffff;
+    padding-top: 5px!important;
+}
+
+#footer a {
+    color: #ffffff;
+    text-decoration: underline;
+}
 
 
 /* === TYJOW. LE BOSS. TYJOW BOSS, LE NOUVEAU PARFUM DE OUF === */
