--- a/wp-content/themes/site-promo-rennes/style.css
+++ b/wp-content/themes/site-promo-rennes/style.css
@@ -147,6 +147,11 @@ Author: Tyjow, Nabil, Julien, Anna
 	align-items: center;
 	flex-direction: column;
 }
+#content > a {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
 .sidebar {
 	background-color: #009b9d;
 }
@@ -154,12 +159,12 @@ Author: Tyjow, Nabil, Julien, Anna
 	color: #fff;
 }
 .sidebar p {
-	padding: 10px;
+	padding: 15px 25px;
 }
 .newsletter {
 	width: 80%;
 	background-color: #fff;
-	box-shadow: 1px 1px 5px #000;
+	box-shadow: 1px 1px 5px #333;
 	justify-content: space-around;
 }
 .input-box {
@@ -168,4 +173,33 @@ Author: Tyjow, Nabil, Julien, Anna
 	display: flex;
 	justify-content: space-around;
 	align-items: flex-start;
+}
+.post_content p {
+	color: #fff;
+	padding: 15px 30px;
+}
+.postmetadata {
+	box-shadow: 1px 1px 5px #333;
+}
+.title-news {
+	background-color: #fff;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+.title-news h2 {
+	color: #333;
+	margin-top: 10px;
+}
+.title-news a {
+	color: #fff;
+	background-color: #009b9d;
+	padding: 5px 10px;
+	border-radius: 50%;
+	box-shadow: 0px 2px 3px #333;
+}
+.title-news a:hover {
+	color: #fff;
+	background-color: #333;
+	box-shadow: 0px 2px 3px #000;
 }
