modif footer + décallages réglé sur le header

--- a/wp-content/themes/site-promo-rennes/style.css
+++ b/wp-content/themes/site-promo-rennes/style.css
@@ -31,6 +31,18 @@ Author: Tyjow, Nabil, Julien, Anna
     /*margin: 80vh 0;*/
 }
 
+.block-opaque {    
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
 .content-button {
     background-color: rgba(255, 255, 255, .7);
     width: 50%;
@@ -62,18 +74,6 @@ button:hover.content-button  a {
     transition: .3s;
 }
 
-.block-opaque {
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    height: 100%;
-}
 
 .menu-top-container {
     position: fixed;
@@ -83,7 +83,7 @@ button:hover.content-button  a {
     background-color: #fff;
     font-weight: 700;
     border-bottom: 3px solid #009b9d;
-    box-shadow: 0 0 15px #444;
+    box-shadow: 0 0 15px #777;
     z-index: 999;
 }
 
@@ -170,7 +170,6 @@ button:hover.content-button  a {
     font-size: 1.5em;
     color: #009b9d;
     padding-top: 30px;
-
 }
 
 #center p, #a_propos p {
@@ -180,15 +179,19 @@ button:hover.content-button  a {
 }
 
 #footer {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    height: 80px;
     background-color: #009b9d;
     text-align: center;
     color: #ffffff;
-    padding-top: 5px!important;
 }
 
 #footer a {
-    color: #ffffff;
-    text-decoration: underline;
+    color: #E9C70C;
+    font-weight: 600;
 }
 
 
