updated sidebar 0.2 and single page

--- a/wp-content/themes/site-promo-rennes/style.css
+++ b/wp-content/themes/site-promo-rennes/style.css
@@ -284,10 +284,10 @@ background-color: #fff;
 	align-items: center;
 }
 .sidebar {
-	background-color: #009b9d;
+	background-image: url('img/bg.png');
 }
 .sidebar h2 {
-	color: #fff;
+	color: #333;
 }
 .sidebar p {
 	padding: 15px 25px;
@@ -306,7 +306,7 @@ background-color: #fff;
 	align-items: flex-start;
 }
 .post_content p {
-	color: #fff;
+	color: #333;
 	padding: 15px 30px;
 }
 .postmetadata {
@@ -341,18 +341,33 @@ background-color: #fff;
 #menu-deroulant {
 	height: 50px;
 }
-.bandeau {
+.bandeau > h2 {
 	margin-top: 0;
-	color: #009b9d;
+	margin-bottom: 0;
+	color: #fff;
 	font-size: 60px;
+	background-color: #009b9d;
 }
 .fond-single {
 	display: flex;
 	justify-content: center;
+	background-image: url('img/bg.png');
 }
 .single-article {
 	width: 50%;
 	justify-content: space-around;
+	background-color: #fff;
+	margin-top: 30px;
+	margin-bottom: 30px;
+	box-shadow: 0px 0px 5px #333;
+	border-radius: 5px;
+}
+.single-article > div {
+	border-radius: 5px;
+}
+.single-article > div img {
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
 }
 .content-single p {
 	margin: 10px 0 10px 0;
