--- a/wp-content/themes/site-promo-rennes/style.css
+++ b/wp-content/themes/site-promo-rennes/style.css
@@ -143,7 +143,12 @@ src: url('fonts/OpenSans/OpenSans-Bold.ttf');
 }
 .listApprenant{
 background-image: url('img/bg.png');
-padding-top: 2em;
+padding-top: 6em;
+}
+
+.textApprenant p{
+text-align: center;
+font-family: 'OpenSans-Light';
 }
 .listApprenant img{
 width:160px;
@@ -156,15 +161,22 @@ margin-bottom: 20px;
 }
 .listApprenant h2{
 font-family: ;
-font-size:3em;
+font-size:2.5em;
 height: 60px;
 line-height: 60px;
 width: 90%;
 margin: auto;
 border-radius: 2px;
-padding-left: 2em;
+padding-left: 2.4em;
 color: #fff;
 font-family: 'OpenSans-Light';
+background-size: 8%;
+background-position: 0.5em center;
+background-repeat: no-repeat;
+background-color: rgba(56,152,157,0.9);
+}
+.front{
+border-right: 4px dashed rgba(147,126,144,0.5);
 }
 .backTitre{
 background-image: url('img/settings.png');
@@ -172,23 +184,36 @@ background-image: url('img/settings.png');
 .frontTitre{
 background-image: url('img/ungroup.png');
 }
-.backTitre,.frontTitre{
-background-size: 8%;
-background-position: 0.5em center;
-background-color: rgba(56,152,157,0.9);
-background-repeat: no-repeat;
-}
 .apprenant{
 padding: 20px;
 margin-top: 3em;
 }
-.apprenant h3{
+.nomApprenant{
 font-size: 1.5em;
 margin-bottom: 0.8em;
 font-family: 'OpenSans-Semibold';
+cursor: pointer;
 }
-.front{
-border-right: 4px dashed rgba(147,126,144,0.5);
+.infoBox i{
+font-size: 1.5em;
+color: grey;
+float: right;
+}
+.infoBox{
+display: none;
+width:auto;
+height: auto;
+padding:1em;
+background-color: rgba(250,250,250,0.8);
+position: relative;
+-moz-box-shadow: 2px 1px 2px 0px #9b9b9b;
+-webkit-box-shadow: 2px 1px 2px 0px #9b9b9b;
+-o-box-shadow: 2px 1px 2px 0px #9b9b9b;
+box-shadow: 2px 1px 2px 0px #9b9b9b;
+filter:progid:DXImageTransform.Microsoft.Shadow(color=#9b9b9b, Direction=116, Strength=2);  
+}
+.progress-bar{
+background-color: grey!important;
 }
 .btnCv,.btnFolio{
 height: auto;
@@ -205,6 +230,13 @@ color: #fff;
 border: 1px solid rgba(56,152,157,0.9);
 background-color: #fff;
 }
+/*.front .btnFolio{
+background-color: rgba(220,172,0,0.9);
+}
+.front .btnCv{
+border: 1px solid rgba(220,172,0,0.6);
+color: rgba(220,172,0,0.9);
+}*/
 
 
 
