--- a/wp-content/themes/site-promo-rennes/style.css
+++ b/wp-content/themes/site-promo-rennes/style.css
@@ -437,8 +437,7 @@ legend p {
 }
 
 #bouton_valider {
-    text-align: right;
-    padding-right: 10px;
+    padding-left: 70px;
     padding-bottom: 15px;
 }
 
