--- a/wp-content/themes/site-promo-rennes/style.css
+++ b/wp-content/themes/site-promo-rennes/style.css
@@ -512,7 +512,7 @@ input[type=submit]:focus {
 	margin-top: 10px;
     border-bottom: 2px solid #009b9d;
 }
-.title-news a {
+.title-news > a {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -528,7 +528,7 @@ input[type=submit]:focus {
 	box-shadow: 0px 2px 3px #666;
 	transition: all 0.50s;
 }
-.title-news a:hover {
+.title-news > a:hover {
 	color: #fff;
     text-decoration: none;
 	background-color: #009b9d;
