--- a/wp-content/themes/site-promo-rennes/style.css
+++ b/wp-content/themes/site-promo-rennes/style.css
@@ -170,18 +170,29 @@ background-repeat: no-repeat;
 background-position: center center;
 margin-bottom: 20px;
 }
+@media screen and (max-width: 500px) {
+    .listApprenant h2{  
+        background-image: none;
+        font-size: 7vw!important;
+    }
+}
+@media screen and (min-width: 1400px) {
+    .listApprenant h2{  
+        background-size: 5%!important;
+        font-size: 2vw!important;
+        padding-left: 4vw!important;
+    }
+}
 
 .listApprenant h2{
-font-family: ;
-font-size:2.5em;
+font-size: 3.4vw;
 height: 60px;
 line-height: 60px;
-width: 90%;
 margin: auto;
 border-radius: 2px;
-padding-left: 2.4em;
+padding-left: 6vw;
 color: #fff;
-font-family: 'OpenSans-Light';
+font-family:'OpenSans-Light';
 background-size: 8%;
 background-position: 0.5em center;
 background-repeat: no-repeat;
